# simterm

./: .gitignore  Cargo.toml  LICENSE  README.md  pack.ps1
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  validate.rs
crates/engine/src/asset/: mod.rs
crates/engine/src/domains/: mod.rs
crates/engine/src/domains/pentest/: achievements.rs  actions.rs  mod.rs  stage.rs  target.rs
crates/engine/src/loader/: mod.rs
crates/engine/src/model/: campaign.rs  command.rs  filesystem.rs  intel.rs  language.rs  meter.rs  mission.rs  mod.rs  target.rs  terminal.rs  theme.rs  toolbox.rs  world.rs
crates/engine/src/runtime/: actions.rs  balance.rs  core.rs  detection.rs  meter.rs  mod.rs  probability.rs  shell.rs  state.rs  sysemu.rs
crates/simterm/: Cargo.toml  build.rs
crates/simterm/src/: app.rs  audio.rs  autoplay.rs  command.rs  completion.rs  effects.rs  embedded.rs  main.rs  palette.rs  playthrough_test.rs  registry.rs  ui.rs
crates/simterm/src/app/: info.rs  minigames.rs
docs/: ARCHITECTURE.md  CAMPAIGN_FORMAT.md  COMMANDS.md  MODDING.md
examples/demo_orbita/: campaign.ron
examples/sample_campaign/: campaign.ron
