# simterm: playable terminal frontend. It connects the framework runtime to the
# terminal UI (ratatui/crossterm) and resolves which campaign to load from the
# CLI (--campaign).
[package]
name = "simterm"
description = "Terminal frontend and CLI for SimTerm experiences."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "simterm"
path = "src/main.rs"

[dependencies]
simterm-engine = { path = "../engine" }
ratatui.workspace = true
crossterm.workspace = true
rand.workspace = true
ron.workspace = true
chacha20poly1305 = "0.10"
flate2 = "1.0"
# Audio opcional: reproduce la pista de cada misión. WAV (campañas abiertas de
# desarrollo) y Ogg Vorbis (recomendado al empaquetar: mucho más ligero que WAV).
# Es tolerante a fallos (sin dispositivo o formato = silencio).
rodio = { version = "0.20", default-features = false, features = ["wav", "vorbis"] }

[features]
default = []
embed-campaign = []

[build-dependencies]
chacha20poly1305 = "0.10"
flate2 = "1.0"
